[tool.poetry]
authors = ["Jon Connell <python@figsandfudge.com>"]
classifiers = [
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
description = "Create Apple Numbers spreadsheet calendars using python"
documentation = "https://github.com/masaccio/numbers-calendar/blob/main/README.md"
license = "MIT"
name = "numbers-calendar"
packages = [{include = "numbers_calendar", from = "src"}]
readme = "README.md"
repository = "https://github.com/masaccio/numbers-calendar"
version = "1.0.0"

[tool.poetry.scripts]
numbers-calendar = "numbers_calendar._numbers_calendar:main"

[tool.poetry.dependencies]
python = "^3.8"
# numbers-parser = {git = "https://github.com/masaccio/numbers-parser.git"}
numbers-parser = "^4.3"
holidays = "^0.29"
pycountry = "^22.3.5"
xlsxwriter = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
pylama = "^8.4.1"
pytest = "^7.2.0"
pytest-console-scripts = "^1.3.1"
pytest-cov = "^4.0.0"
pytest-profiling = "^1.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = "--cov=src/numbers_parser --cov-report=term-missing"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38, py39, py310, py311
[testenv]
allowlist_externals = poetry
commands_pre = poetry install --no-root --sync
commands = poetry run -vvv pytest --import-mode importlib
"""

# linter settings
[tool.pylama]
linters = "pylint,mccabe,pyflakes"
max_line_length = 100

[tool.pylama.linter.pycodestyle]
format = "pylint"
ignore = "E203,E231,W503"

[tool.pylama.linter.mccabe]
max-complexity = 15

[tool.pylama.linter.pyflakes]
builtins = "_"
